<resources>
    <string name="app_name">My Application</string>
    <string name="txt_welcome">Welcome to LeAdmin</string>
    <string name="hint_address">Address</string>
    <string name="hint_numOfFloors">Number of floors</string>
    <string name="hint_numOfFlats">Number of flats</string>
    <string name="Building_heatType">Choose heating type:</string>
    <string name="Building_elevatorExistence">Elevator:</string>
    <string name="Building_heatTypeCentral">Central</string>
    <string name="Building_heatTypeAutonomous">Autonomous</string>
    <string name="Building_elevatorExistenceCheckBox">Exists</string>
    <string name="Building_submitData">Submit</string>
    <string name="Building_ElevatorYes">Yes</string>
    <string name="Building_ElevatorNo">No</string>
    <string name="Building_showFlats">Buildings Flats</string>
    <string name="Building_addFlat">Create a buildings flat!</string>
    <string name="Building_addFlatComment">Enter the flats data below.</string>
    <string name="Flat_Id">Flat Id</string>
    <string name="Flat_UserId">User Id</string>
    <string name="Flat_floor">Floor</string>
    <string name="Flat_Area">Flats area</string>
    <string name="Flat_HT">Heating Percentage</string>
    <string name="btn_AddFlat">Create Flat</string>
    <string name="btn_AddFlat2">Create Flat</string>
    <string name="btn_FinishFlats">Finished Creating Flats</string>
    <string name="btn_AddUsers">Create User</string>
    <string name="btn_FinishUsers">Finished Creating Users</string>
    <string name="btn_managePayments">Manage Payments</string>
    <string name="User_addUser">Create a buildings user!</string>
    <string name="User_addComment">Enter the users data below.</string>
    <string name="User_id">User Id</string>
    <string name="User_username">Username</string>
    <string name="User_password">Password</string>
    <string name="User_flatId">Flat ID</string>
    <string name="btn_AddUser">Create User</string>
    <string name="btn_FinishManagement">Back to Main Screen</string>
    <string name="Admin_newNotification">Create Notification</string>
    <string name="Admin_newMonthlyBalance">Create Monthly Balance</string>
    <string name="Notification_addNotification">Create a new Notification!</string>
    <string name="Notification_addNotifComment">Enter the notifications data below.</string>
    <string name="Notification_id">Notification ID</string>
    <string name="Notification_date">Notification Date</string>
    <string name="Notification_desc">Notification Description</string>
    <string name="Balance_addMonthlyBalance">Create a new Monthly Balance!</string>
    <string name="Balance_addMonthlyBalanceComment">Enter the monthly balance data below.</string>
    <string name="Balance_electricity">Monthly Electricity Cost</string>
    <string name="Balance_elevator">Monthly Elevator Cost</string>
    <string name="Balance_cleaning">Monthly Cleaning Cost</string>
    <string name="Balance_heating">Monthly Heating Cost</string>
    <string name="Admin_managePaymentComment">Click on any user to manage his payments.</string>
    <string name="Admin_editPaymentComment">Edit Users Balance Amount!</string>
    <string name="Admin_editPaymentDesc">Enter below the amount of money to be reducted from Users Balance.</string>
    <string name="Admin_editPaymentAmount">Amount</string>
    <string name="User_notificationsCaption">Notifications</string>
    <string name="User_paymentsCaption">Payments</string>
    <string name="User_backToMain">Back to Main Screen</string>
    <string name="User_makePayment">Make a new online payment!</string>
    <string name="User_addPaymentComment">Enter the payments data below.</string>
    <string name="Payment_Amount">Payment Amount</string>
    <string name="Payment_Date">Payment Date</string>
    <string name="btnMakePayment">Make Payment</string>
    <string name="User_BalanceCaption">Balance</string>
    <string name="User_MyBalance">My Balance</string>
    <string name="User_MyBalanceAmount"></string>
</resources>