<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.view.AddFlatActivity">

    <TextView
        android:id="@+id/textViewCreateNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Notification_addNotification"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/textViewAddNotifComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Notification_addNotifComment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <EditText
        android:id="@+id/editTextNotifId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EC9696"
        android:ems="10"
        android:hint="@string/Notification_id"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <EditText
        android:id="@+id/editTextNotifDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EC9696"
        android:ems="10"
        android:hint="@string/Notification_date"
        android:inputType="date"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <EditText
        android:id="@+id/editTextNotifDescription"
        android:layout_width="261dp"
        android:layout_height="255dp"
        android:backgroundTint="#EC9696"
        android:ems="10"
        android:hint="@string/Notification_desc"
        android:inputType="textLongMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695" />

    <ImageView
        android:id="@+id/imageViewSubmitNotif"
        android:layout_width="70dp"
        android:layout_height="61dp"
        android:background="#EC9696"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        app:srcCompat="@android:drawable/ic_menu_send" />


</androidx.constraintlayout.widget.ConstraintLayout>