<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.view.UserMainActivity">

    <ImageView
        android:id="@+id/imageViewUserNotificationsImg"
        android:layout_width="74dp"
        android:layout_height="79dp"
        android:background="#AA1818"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        app:srcCompat="@android:drawable/ic_popup_reminder" />

    <TextView
        android:id="@+id/textViewUserNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User_notificationsCaption"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <ImageView
        android:id="@+id/imageViewUserPaymentsImg"
        android:layout_width="74dp"
        android:layout_height="79dp"
        android:background="#AA1818"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_notify_more" />

    <TextView
        android:id="@+id/textViewUserPayments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User_paymentsCaption"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <ImageView
        android:id="@+id/imageViewBalanceBtn"
        android:layout_width="74dp"
        android:layout_height="79dp"
        android:background="#AA1818"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851"
        app:srcCompat="@android:drawable/ic_dialog_dialer" />

    <TextView
        android:id="@+id/textViewUserBalanceCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User_BalanceCaption"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />
</androidx.constraintlayout.widget.ConstraintLayout>